Bootstrap PushbackNodeEmbeddingsStreamProcedureFacade